# MAPL-Player

./: .gitignore  README.md  index.html  install.sh  mapl-player.desktop  package-lock.json  package.json
electron/: main.js  package-lock.json
native/: CMakeLists.txt  ModelDownloader.cpp  ModelDownloader.h  PlayerController.cpp  PlayerController.h  README.md  SubtitleGenerator.cpp  SubtitleGenerator.h  main.cpp  main.qml
